# netease-music-downloader-rs

./: .gitignore  CODEX.md  Cargo.toml  LICENSE  README.md
src/: commands.rs  main.rs  netease.rs  proxy.rs  types.rs  utils.rs
tests/: cli_integration.rs
