[package]
name = "netease_music_downloader_rs"
version = "0.10.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.17"
md5 = "0.8"
once_cell = "1.21"
openssl = "0.10"
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
wiremock = "0.6"
